DailyActivities tooltip left to implement

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script
+      src="https://kit.fontawesome.com/cbf8feb3a6.js"
+      crossorigin="anonymous"
+    ></script>
     <title>SportSee</title>
   </head>
   <body>
