--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/sportsee_favicon.svg" />
+    <link rel="icon" href="../src/assets/sportsee_favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
